handle long relative path specified in -Xbootclasspath/a on windows

XMLWordPrintable

    • b17
    • x86_64
    • windows

        On windows, if a long relative path is specified in -Xbootclasspath/a, the class cannot be found.

        $MYJDK/bin/java -Xbootclasspath/a:./yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy Hello
        Error: Could not find or load main class Hello
        Caused by: java.lang.ClassNotFoundException: Hello

        The -cp option doesn't have this problem.

        This is an existing problem in jdk9, probably in earlier releases as well.

              Assignee:
              Ralf Schmelter
              Reporter:
              Calvin Cheung (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: