8191521: handle long relative path specified in -Xbootclasspath/a on windows

Reviewed-by: ccheung, clanger